[project]
name = "pkg-service"
version = "0.1.0"
description = "PDD 多多驿站 C 端查件小程序后端（自治：内嵌 anti-content + mdkd 登录算法）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "requests>=2.32",
    "cryptography>=42",
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "pymysql>=1.1",
    "redis>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pkg_service*"]
